// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no-implicit.coffee 1`] = `
a: b c
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b c

`;

exports[`no-implicit.coffee 2`] = `
a: b c
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ a: b c }

`;

exports[`no-implicit.coffee 3`] = `
a: b c
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
a: b(c)

`;

exports[`no-implicit.coffee 4`] = `
a: b c
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
{ a: b(c) }

`;
